fix: improve readability of errors on darkmode

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -91,7 +91,7 @@ h1 {
     --muted-foreground: 215 20.2% 65.1%;
     --accent: 217.2 32.6% 17.5%;
     --accent-foreground: 210 40% 98%;
-    --destructive: 0 62.8% 30.6%;
+    --destructive: 0 81.8% 54.6%;
     --destructive-foreground: 210 40% 98%;
     --border: 217.2 24% 24%;
     --input: 217.2 24% 24%;
